<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/thl"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="80dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/preview"
                android:enabled="false"
                android:id="@+id/preview"/>

            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/show_from_frame_listener"
                android:enabled="false"
                android:id="@+id/transfer"/>

        </LinearLayout>
        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/surface_view_example"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/black"
            android:orientation="horizontal">

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5">

                <SurfaceView
                    android:id="@+id/previewSurface"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"/>

                <com.yukkei.loomovital.pose.GraphicOverlay
                    android:id="@+id/overlayImage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintLeft_toLeftOf="@id/previewSurface"
                    app:layout_constraintRight_toRightOf="@id/previewSurface"
                    app:layout_constraintTop_toTopOf="@id/previewSurface"
                    app:layout_constraintBottom_toBottomOf="@id/previewSurface"
                    android:layout_gravity="right"/>

            </FrameLayout>

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5">

                <org.opencv.android.JavaCameraView
                    android:id="@+id/opencv_surface_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="640dp"
                    android:minHeight="480dp"
                    app:show_fps="true" />
            </FrameLayout>
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/debug_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="16dp"
        android:text="@string/screenshot_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/debug_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/debug"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>